<?xml version="1.0"?>
<package>
  <name>%(package)s</name>
  <version>0.1.0</version>
  <description>

     %(description)s

  </description>
  <maintainer email="%(author)s@gmail.com">%(author)s</maintainer>
  <author>%(author)s</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
%(depends)s
 
</package>
